k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readinglist-api
  namespace: matheus515-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: readinglist-api
  template:
    metadata:
      labels:
        app: readinglist-api
    spec:
      containers:
        - name: api
          image: docker.io/matheus515/readinglist:6474e18af2c1c84d1fa25a339c0c5008afb687d4
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: "10m"        # very small request
              memory: "128Mi"
            limits:
              cpu: "200m"       # modest limit
              memory: "256Mi"
